Modern dynamic result panel: editable, copy, download, auto-refresh after form submit

--- a/index.html
+++ b/index.html
@@ -86,10 +86,13 @@
                                 <p>Henüz içerik oluşturulmadı. Formu doldurup gönderin.</p>
                             </div>
                             <div id="result-content" class="result-content hidden">
-                                <div id="content-display"></div>
+                                <div id="content-display" contenteditable="true" class="editable-content"></div>
                                 <div class="result-actions">
                                     <button id="copy-btn" class="btn secondary-btn">
                                         <i class="fa-regular fa-clipboard"></i> Kopyala
+                                    </button>
+                                    <button id="download-btn" class="btn secondary-btn">
+                                        <i class="fa-solid fa-download"></i> İndir
                                     </button>
                                     <button id="new-content-btn" class="btn primary-btn">
                                         <i class="fa-solid fa-plus"></i> Yeni İçerik
