--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
                                 </div>
                             </div>
                         </div>
+                        <div id="ai-output" class="ai-output"></div>
                     </div>
                 </div>
             </section>
